# billard

./: .gitignore  CMakeLists.txt  README.md  format_code.sh
include/: Ball.hpp  Render.hpp
rendering/: render.pov
rendering/gimp/: ball_yellow_half.xcf
src/: Ball.cpp  Render.cpp  main.cpp
